--- a/src/basic/basic-layout-2.html
+++ b/src/basic/basic-layout-2.html
@@ -6,11 +6,20 @@
     <title>Basic Layout 2</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+     body {
+      display: grid; 
+      grid-template-columns: 1fr 3fr; 
+      grid-template-rows: 1fr 4fr 1fr;
+     }
+     nav { 
+      grid-row-start: 1;
+      grid-row-end: 4;
+     }
+  
     </style>
   </head>
   <body id="basic-layout-2">
-    <header><h1>Basic Layout 2</h1></header>
+   <header><h1>Basic Layout 2</h1></header>
     <nav><a href="../index.html">Terug naar het overzicht</a></nav>
     <main></main>
     <footer></footer>
