--- a/src/basic/basic-layout-6.html
+++ b/src/basic/basic-layout-6.html
@@ -6,7 +6,27 @@
     <title>Basic Layout 6</title>
     <link rel="stylesheet" href="../style.css" />
     <style>
-      /* Doe hier jouw ding! */
+      body {
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 1fr 5fr;
+        row-gap: 6px;
+        grid-template-areas:
+          "header header footer"
+          "nav main footer";
+      }
+      main {
+        grid-area: main;
+      }
+      header {
+        grid-area: header;
+      }
+      footer {
+        grid-area: footer;
+      }
+      nav {
+        grid-area: nav;
+      }
     </style>
   </head>
   <body id="basic-layout-6">
